Resolves: tdf#124931 key stroke in shortcut keys not selecting the key combo

Change-Id: Ife3e99e0cf00d7d320eb8e403743d42fb8274df8